@@ -1,7 +1,14 @@
 package test.failures;
 
+import static org.assertj.core.api.Assertions.assertThat;
+
+import java.io.File;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 import org.testng.TestNG;
 import org.testng.annotations.Test;
+import org.testng.collections.Maps;
 import org.testng.reporters.FailedReporter;
 import org.testng.xml.XmlSuite;
 
@@ -12,6 +19,8 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.HashMap;
 import java.util.Map;
+import test.failures.issue1930.SimpleCliStatus;
+import test.failures.issue1930.TestClassSample;
 
 public class FailuresTest extends BaseFailuresTest {
 
@@ -64,5 +73,35 @@ public class FailuresTest extends BaseFailuresTest {
     tng.run();
 
     verify(tempDirectory, suiteName, expectedParameter);
+  }
+
+  @Test(description = "GITHUB-1930")
+  public void testToEnsureThatWeRunOnlyFailedIterationsFromBaseClass() {
+    File outputDir = createDirInTempDir("testng-tmp-" + System.currentTimeMillis() % 1000);
+    TestNG testng = create(TestClassSample.class);
+    testng.setOutputDirectory(outputDir.getAbsolutePath());
+    testng.setUseDefaultListeners(true);
+    testng.run();
+    String file = outputDir.getAbsolutePath() + File.separator + FailedReporter.TESTNG_FAILED_XML;
+
+    //First iteration of running failed tests.
+    runIteration(outputDir, file);
+    //Second iteration of running failed tests.
+    runIteration(outputDir, file);
+  }
+
+  private static void runIteration(File outputDir, String file) {
+    SimpleCliStatus listener = new SimpleCliStatus();
+    TestNG testng = create();
+    testng.setTestSuites(Collections.singletonList(file));
+    testng.setOutputDirectory(outputDir.getAbsolutePath());
+    testng.setUseDefaultListeners(true);
+    testng.addListener(listener);
+    testng.run();
+
+    Map<String, List<Integer>> expected = Maps.newHashMap();
+    expected.put("testPrimeNumberChecker", Arrays.asList(3, 4));
+    expected.put("testNumberEquality", Arrays.asList(2, 3));
+    assertThat(listener.getFailedTests()).containsAllEntriesOf(expected);
   }
 }
